# degenerousai

./: .gitignore  MEMORY_OPTIMIZATION.md  Makefile  aiscript.old.sh  aiscript.sh  pyproject.toml  reload.mk  run.mk  test_chat_completions.py  test_memory_optimized.py
examples/: chat_completions_usage.py
src/api/: main.py
src/api/middelware/: api_keys.py
src/api/model/: chat_completions.py  speech.py  video.py
src/api/routers/: process.py  processor.py  router.py  test.py
src/api/services/: api_keys.py  doc_processing.py  ocr.py  processor.py  test_ocr.py  tts.py
src/config/: keys.py
src/core/chat/: openai.py
src/core/document/: openai.py
src/core/interface/: base.py  image.py  text.py  texttospeech.py  video.py
src/core/processor/: openai.py
src/core/tts/: kokoro.py
src/database/: api_keys.py  main.py  topic_draft.py  vector_store.py
src/degenerousai/: main.py
src/model/: chat_completions.py  image.py  processor.py  speech.py  topic.py  vector.py
