[project]
name = "degenerousai"
version = "0.1.0"
description = "Central service for Degenerous AI"
authors = [
    {name = "Rhaqim",email = "anusiemj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.116.1",
    "pydantic==2.11.7",
    "numpy>=2.3.2",
    "soundfile==0.13.0",
    "kokoro (>=0.9.4,<0.10.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fitz (>=0.0.1.dev2,<0.0.2)",
    "docx2txt (>=0.9,<0.10)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "openai (>=1.106.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "transformers (>=4.56.2,<5.0.0)",
    "accelerate (>=1.10.1,<2.0.0)",
    "kernels (>=0.10.2,<0.11.0)",
    "torch (>=2.8.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "degenerousai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
